refactor: new structure of source code

--- a/src/dynm/gen/Makefile
+++ b/src/dynm/gen/Makefile
@@ -1,24 +1,13 @@
-#********** Compiler command **********
 FILE := main.cpp system.cpp
+FLAGS := -std=c++20 -O2 
 ARG := $(if $(ARG), $(ARG),1 0.31 0.61 0.01 F 100 100 5) 
 
-FLAGS := -std=c++20 -O2 -Wall -Wpedantic -Wsign-conversion
-COMPILER := g++ 
-
-
-
-
-#********** Debugging configurations **********
 debug: $(FILE) system.hpp
-	$(COMPILER) $(FLAGS) $(FILE) -o debug
+	g++ $(FLAGS) -Wall -Wpedantic -Wsign-conversion $(FILE) -o debug
 	time ./debug $(ARG)
 
-
-#********** Release configurations **********
 release:
-	$(COMPILER) -std=c++20 -O2 $(FILE) -o $(DIR)
+	g++ $(FILE) -o ../../../bin/$(NAME)
 
-
-#********** Clean **********
 clean:
 	rm -rf debug L*
