--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.venv
 .vscode
 
 bin/*
@@ -10,9 +11,8 @@ data/raw/equi/*
 data/snap/*
 !data/snap/.gitkeep
 
-
 literature
-raw/dynm/
+
 # Output files 
 *.png
 *.pdf
