--- a/latex/Makefile
+++ b/latex/Makefile
@@ -1,30 +1,34 @@
-PLOT_DIR := plots
-BIB := refernces.bib
-FLAGS := -synctex=1 -shell-escape -output-directory auxiliary 
+FLAGS:=-synctex=1 -shell-escape -output-directory=auxiliary 
+TEXDIRS:=formal results theory images
+PLTDIR:=plots
+IMGDIR:=images
 
-default: auxiliary/main.pdf 
-	evince main.pdf &
+TEXFILES:=$(foreach D,$(TEXDIRS),$(wildcard $(D)/*.tex))
+GPFILES:=$(filter-out $(PLTDIR)/include.gp,$(wildcard $(PLTDIR)/*.gp))
+SVGFILES:=$(wildcard $(IMGDIR)/*.svg)
 
-auxiliary/main.pdf: main.tex formal/*.tex results/*.tex theory/*.tex images/*.tex 
-	mkdir -p auxiliary
-	pdflatex $(FLAGS) main
-	cp auxiliary/main.pdf ./
+
+all: auxiliary/main.pdf 
+	@evince main.pdf &
+
+# document
+auxiliary/main.pdf: main.tex $(TEXFILES) $(patsubst %.gp,%.eps,$(GPFILES)) $(patsubst %.svg,%.eps,$(SVGFILES))
+	@mkdir -p auxiliary
+	@pdflatex $(FLAGS) main 
+	@cp auxiliary/main.pdf ./
+
+# plots 
+$(PLTDIR)/%.eps: $(PLTDIR)/%.gp 
+	@$(MAKE) --directory=$(PLTDIR)
+
+# images
+$(IMGDIR)/%.eps: $(IMGDIR)/%.svg 
+	@$(MAKE) --directory=$(IMGDIR)
 
 clean:
-	rm -rf auxiliary
+	@$(MAKE) clean --directory=$(PLTDIR)
+	@$(MAKE) clean --directory=$(IMGDIR)
+	@rm -rf auxiliary
 
 bib:
-	bibtex auxiliary/main
-	pdflatex $(FLAGS) main
-	pdflatex $(FLAGS) main
-
-plot:
-	$(MAKE) --directory=$(PLOT_DIR)
-	pdflatex $(FLAGS) main
-	cp auxiliary/main.pdf main.pdf
-
-
-plotclean:
-	$(MAKE) clean --directory=$(PLOT_DIR)
-
-
+	bibtex auxiliary/main     
