feat: set up rudimentär test for egen and rewoked makefile

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ data/raw/equi/*
 data/snap/*
 !data/snap/.gitkeep
 
+src/tests/current
+src/**/debug
+
 latex/auxiliary
 latex/images/*eps
 latex/images/*pdf
@@ -20,9 +23,3 @@ latex/plots/*.pdf
 
 literature
 anmeldung.pdf
-
-# Output files 
-*.png
-*.pdf
-!thesis.pdf
-*.log
