--- a/src/equi/gen/Makefile
+++ b/src/equi/gen/Makefile
@@ -5,11 +5,16 @@ D_TRGT := debug
 TRGT := egen
 
 TESTS := ../../tests
+BINARIES := ../../../bin
 
 CXX := g++
 D_FLAGS := -std=c++20  -Wall -Wpedantic -Wsign-conversion -O0 -g
 R_FLAGS := -std=c++20 -O2
-ARGS := 1 0.4 U 2000 2000 2000
+ARGS := 1 0.4 U 2000 2000 2000 ./
+
+LENGTHS := 30 40 50 60 70 80 90 100 110 120
+ALGORITHMS := single line
+INTERACTIONS := -0.5
 
 # build
 all: $(D_TRGT)
@@ -18,10 +23,23 @@ $(D_TRGT): $(SRC) $(HDR)
 	$(CXX) $(D_FLAGS) $(SRC) -o $(D_TRGT)
 	@echo "Running debug build..."
 	@time ./$(D_TRGT) $(ARGS)
-	$(MAKE) test
+	@$(MAKE) test
 
 release: 
-	$(CXX) $(R_FLAGS) $(SRC) -o ../../../bin/$(TRGT)-$(L)-$(ALGORITHM)
+	@for L in $(LENGTHS); do\
+		for A in $(ALGORITHMS); do\
+			for I in $(INTERACTIONS); do\
+				if [ "$$A" = "line" ]; then \
+					LINEUPDATE=true; \
+				else \
+					LINEUPDATE=false; \
+				fi; \
+				DEFS="-DLATTICE_LENGTH=$$L -DLINEUPDATE=$$LINEUPDATE -DNNN_INTERACTION=$$I"; \
+				$(CXX) $(R_FLAGS) $$DEFS $(SRC) -o $(BINARIES)/egen$${L}$${A}$${I}; \
+			done;\
+		done;\
+	done
+
 
 # test
 test: test-run test-diff
