set up master make file

--- a/src/equi/Makefile
+++ b/src/equi/Makefile
@@ -1,24 +1,35 @@
 FILE ?= mean.cpp
-FLAGS := -std=c++20 -O2
+
+D_TRGT := debug
+R_TRGT := mean peak wham
+BINARIES := ../../bin
+
+CXX := g++
+D_FLAGS := -std=c++20  -Wall -Wpedantic -Wsign-conversion -O0 -g
+R_FLAGS := -std=c++20 -O2
 
 ifeq ($(basename $(FILE)), mean)
-    ARG := ../../data/raw/equi/L30-U ./mean.txt 30
+    ARGS := ../../data/raw/equi/L30-U ./mean.txt 30
 endif
 
 ifeq ($(basename $(FILE)), peak)
-    ARG := ../../data/raw/equi/L30-U ./peak.txt 50 0.35 0.4 200
+    ARGS := ../../data/raw/equi/L30-U ./peak.txt 50 0.35 0.4 200
 endif
 
 ifeq ($(basename $(FILE)), wham)
-    ARG := ../../data/raw/equi/L30-U ./wham.txt 0.35 0.55 200
+    ARGS := ../../data/raw/equi/L30-U ./wham.txt 0.35 0.55 200
 endif
 
-debug: $(FILE) 
-	g++ $(FLAGS) -Wall -Wpedantic -Wsign-conversion $(FILE) -o debug
-	time ./debug $(ARG)
+all: $(D_TRGT) 
+
+$(D_TRGT): $(FILE)
+	$(CXX) $(D_FLAGS) $(FILE) -o debug
+	@time ./$(D_TRGT) $(ARGS)
 
 release:
-	g++ $(FLAGS) $(FILE) -o ../../bin/$(basename $(FILE))
+	@for T in $(R_TRGT); do\
+		$(CXX) $(R_FLAGS) $$T.cpp -o $(BINARIES)/$(basename $$T); \
+	done
 
 clean:
 	rm -rf debug *.txt
