refactor: some changes in src

--- a/src/dynm/gen/Makefile
+++ b/src/dynm/gen/Makefile
@@ -4,7 +4,7 @@ HDR := system.hpp
 D_TRGT := debug
 TRGT := dgen
 
-TESTS := ../../tests
+TESTS := ../../helper
 BINARIES := ../../../bin
 
 CXX := g++
